# main_route.go
@@ -12,6 +12,7 @@ func SetupGroup(appCtx appctx.AppContext, v1 *gin.RouterGroup) {
 
 	v1.POST("/register", usertransport.Register(appCtx))
 	v1.POST("/login", usertransport.Login(appCtx))
+	v1.POST("/logout", middleware.RequireAuth(appCtx), usertransport.Logout(appCtx))
 	v1.POST("/change/password", middleware.RequireAuth(appCtx), usertransport.UpdatePassword(appCtx))
 	v1.GET("/profile", middleware.RequireAuth(appCtx), usertransport.Profile(appCtx))
 	v1.GET("/user/paging", middleware.RequireAuth(appCtx), usertransport.ListUser(appCtx))
